--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.7.0",
+    "better-sqlite3": "^11.0.0",
+    "crypto-js": "^4.2.0",
+    "jose": "^6.1.3",
+    "md-editor-v3": "^4.11.0",
     "nuxt": "^3.14.0",
     "vue": "^3.5.0",
-    "vuetify": "^3.7.0",
-    "@mdi/font": "^7.4.47",
-    "vue3-google-map": "^0.27.0",
-    "better-sqlite3": "^11.0.0",
-    "axios": "^1.7.0",
-    "yaml": "^2.4.0",
-    "md-editor-v3": "^4.11.0",
     "vue-loading-overlay": "^6.0.0",
-    "crypto-js": "^4.2.0"
+    "vue3-google-map": "^0.27.0",
+    "vuetify": "^3.7.0",
+    "yaml": "^2.4.0"
   },
   "devDependencies": {
-    "typescript": "^5.4.0",
+    "@nuxt/types": "^2.18.0",
     "@types/better-sqlite3": "^7.6.0",
     "@types/crypto-js": "^4.2.0",
-    "@nuxt/types": "^2.18.0"
+    "typescript": "^5.4.0"
   }
 }
