--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vite-pwa/nuxt": "^1.1.1",
     "axios": "^1.7.0",
     "better-sqlite3": "^11.0.0",
     "crypto-js": "^4.2.0",
+    "idb-keyval": "^6.2.2",
     "jose": "^6.1.3",
     "md-editor-v3": "^4.11.0",
     "nuxt": "^3.14.0",
