--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto-js": "^4.2.0",
     "idb-keyval": "^6.2.2",
     "jose": "^6.1.3",
+    "leaflet": "^1.9.4",
     "md-editor-v3": "^4.11.0",
     "nuxt": "^3.14.0",
     "vue": "^3.5.0",
